2003-04-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	Renamed classes to match API document.
	
        * Panels.subproj/WebAuthenticationPanel.h:
        * Panels.subproj/WebAuthenticationPanel.m:
        (-[WebAuthenticationPanel setUpForChallenge:]):
        (-[WebAuthenticationPanel runAsModalDialogWithChallenge:]):
        (-[WebAuthenticationPanel runAsSheetOnWindow:withChallenge:]):
        (-[WebAuthenticationPanel sheetDidEnd:returnCode:contextInfo:]):
        * Panels.subproj/WebPanelAuthenticationHandler.h:
        * Panels.subproj/WebPanelAuthenticationHandler.m:
        (-[WebPanelAuthenticationHandler init]):
        (-[WebPanelAuthenticationHandler dealloc]):
        (-[WebPanelAuthenticationHandler isReadyToStartAuthentication:]):
        (-[WebPanelAuthenticationHandler startAuthentication:]):
        (-[WebPanelAuthenticationHandler cancelAuthentication:]):
        (-[WebPanelAuthenticationHandler _authenticationDoneWithChallenge:result:]):
        * Panels.subproj/WebStandardPanels.m:
        (-[WebStandardPanels setUsesStandardAuthenticationPanel:]):

2003-04-21  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

        API changes in NSURLProtocol and its subclasses:

        +canHandleURL: becomes +canInitWithRequest:
        +canonicalURLForURL: becomes +canonicalRequestForRequest:

	Added new _webIsDataProtocolURL: helper method.

        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate connection:didReceiveResponse:]):
        * WebView.subproj/WebDataProtocol.h:
        * WebView.subproj/WebDataProtocol.m:
        (+[WebDataProtocol _webIsDataProtocolURL:]):
        (+[WebDataProtocol canInitWithRequest:]):
        (+[WebDataProtocol canonicalRequestForRequest:]):
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _addBackForwardItemClippedAtTarget:]):
        (-[WebFrame _transitionToCommitted:]):

2003-04-21  Darin Adler  <darin@apple.com>
