@@ -1,3 +1,14 @@
+2003-04-22  Ken Kocienda  <kocienda@apple.com>
+
+        Reviewed by Darin
+
+	Updated to use API-approved methods for accessing 
+	protocol-specific URL request data.
+
+        * WebView.subproj/WebDataProtocol.m:
+        (-[NSURLRequest _webDataRequestParametersForReading]):
+        (-[NSURLRequest _webDataRequestParametersForWriting]):
+
 2003-04-22  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Darin.
